--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default" # Currently available options are "default", "air"
-title                    : "Your Name / Site Title"
+title                    : "Abdelrahman Abdelsalam / Electronics"
 title_separator          : "-"
 name                     : &name "Abdelrahman Abdelsalam"
 description              : &description "Electronics engineer"
