--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title                    : "Abdelrahman Abdelsalam / Electronics"
 title_separator          : "-"
 name                     : &name "Abdelrahman Abdelsalam"
 description              : &description "Electronics engineer"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
+url                      : https://abdelrahman-dip.github.io/abdelrahmanosman.github.io/ # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
@@ -23,13 +23,13 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.jpg"
-  name             : "Your Sidebar Name"
-  pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
+  name             : "Abdelrahman Abdelsalam"
+  pronouns         : # example: "he/his"  
+  bio              : "Electronics engineer"
+  location         : "China"
   employer         : "UESTC"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "abdelsalamabdelrahman0@gmail.com" 
 
   # Academic websites
   academia         : # URL
