--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ title_separator          : "-"
 name                     : &name "Abdelrahman Abdelsalam"
 description              : &description "Electronics engineer"
 url                      : https://abdelrahman-dip.github.io/abdelrahmanosman.github.io/ # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
-baseurl                  : "/abdelrahmanosman.github.io" # the subpath of your site, e.g. "/blog"
+baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "abdelrahman-dip/abdelrahmanosman.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
